--- a/index.html
+++ b/index.html
@@ -1,1 +1,147 @@
+<!DOCTYPE html>
+<!-- Coding By CodingNepal - youtube.com/codingnepal -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">  
+    <title>Memory Card Game in JavaScript | CodingNepal</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <div class="wrapper">
+      <ul class="cards">
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-1.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-1.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-2.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-2.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-3.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-3.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-4.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-4.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-5.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-5.png" alt="card-img4">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-6.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-6.png" alt="card-img4">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-7.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-7.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-8.png" alt="card-img">
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/que_icon.jpg" alt="icon">
+          </div>
+          <div class="view back-view">
+            <img src="https://maikivs23.ikt.khk.ee/malumang/img-8.png" alt="card-img">
+          </div>
+        </li>
+      </ul>
+    </div>
 
+    <script src="lopp2.js"></script>
+
+  </body>
+</html>
